Bug 1079188 - Coerce the argument passed to Object.getOwnPropertyDescriptor using ToObject. r=till